Issue #59: @lianilychee Redesign work
Squashed atomically int othis sole commit

--- a/css/main.scss
+++ b/css/main.scss
@@ -3,9 +3,8 @@
 
 @charset "utf-8";
 
+/*** VARIABLES ***/
 
-
-// Our variables
 $base-font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 $headline-font-family: 'Merriweather', serif;
 $base-font-size:   18px;
@@ -24,7 +23,8 @@ $black-color: #111111;
 $blue-color: #65B3E0;
 $red-color: #CE324A;
 
-// color alias
+
+/*** COLOR ALIAS ***/
 $text-color:       $black-color;
 $background-color: $white-color;
 $brand-color:      $red-color;
@@ -32,20 +32,11 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 15%);
 
 
-// Width of the content area
+/*** WIDTH OF CONTENT AREA ***/
 $content-width:    1200px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
-
-
-// Using media queries with like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
 @mixin media-query($device) {
     @media screen and (max-width: $device) {
         @content;
@@ -53,20 +44,167 @@ $on-laptop:        800px;
 }
 
 
+/*** GENERAL ***/
+body {
+  position: relative;
+  margin: 0;
+  padding-bottom: 12rem;
+  min-height: 100%;
+}
 
-// Import partials from `sass_dir` (defaults to `_sass`)
-@import
-        "vendor/bourbon/bourbon",
-        "vendor/neat/neat",
-        "utility",
-        "base",
-        "layout",
-        "buttons",
-        "lists",
-        "header",
-        "forms",
-        "page-link-nav",
-        "components",
-        "jobs",
-        "syntax-highlighting"
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+a {
+    color: $blue-color;
+    font-weight: bold;
+}
+
+a:hover {
+    color: #4883a5;
+}
+
+.page-content section {
+    margin-bottom: 4rem;
+}
+
+.centered {
+    width: 50em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 250px;
+}
+
+
+/*** NAV ***/
+
+.site-header .logo img {
+    height: 3rem;
+}
+
+.site-header {
+    border-top: 5px solid #CE324A;
+    border-bottom: 1px solid #e8e8e8;
+    min-height: 56px;
+    padding: 1rem;
+    position: relative;
+
+    ul li { 
+        display: inline; 
+        text-decoration: none;
+        margin: 0 0.5rem;
+
+        a {
+            text-decoration: none;
+        }
+    }
+}
+
+
+.site-nav {
+    float: right;
+    line-height: 56px;
+}
+
+
+/*** FOOTER ***/
+
+.site-footer {
+    padding: 30px 0;
+    background: #e8e8e8;
+    position: absolute;
+    margin-top: 6rem;
+    padding-top: 3rem;
+    color: #111;
+    box-sizing: border-box;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.footer-grid {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto;
+    grid-gap: 10px;
+    width: 50em;
+    margin-left: auto;
+    margin-right: auto;
+
+    .cfbcol-4 {
+        grid-column: span 4;
+    }
+}
+
+
+/*** PROJECTS PAGE ***/
+
+.thumb {
+    border: solid #000;
+    border-width: 1px;
+    border-radius: 10px;
+    padding: 10px;
+    display: inline-block;
+}
+
+.cfbgrid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+    grid-gap: 10px;
+
+    .cfbcol-4 {
+        grid-column: span 4;
+    }
+}
+
+.leaderpix {
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
+}
+
+@media screen and (min-width: $on-palm) {
+    .cfbgrid .cfbcol-4 {
+        grid-column: span 5;
+    }
+}
+
+@media screen and (min-width: $on-laptop) {
+    .cfbgrid .cfbcol-4 {
+        grid-column: span 4;
+    }
+}
+
+@media screen and (min-width: 1400px) {
+    .cfbgrid .cfbcol-4 {
+        grid-column: span 3;
+    }
+}
+
+@media screen and (min-width: 1600px) {
+    .cfbgrid .cfbcol-4 {
+        grid-column: span 2;
+    }
+}
+
+@media screen and (min-width: 1900px) {
+    .cfbgrid .cfbcol-4 {
+        grid-column: span 2;
+    }
+}
+
+
+/*** IMPORT PARTIALS FROM 'SASS_DIR' (defaults to '_sass') ***/
+@import 
+    "base",
+    "buttons",
+    "lists",
+    "forms",
+    "page-link-nav",
+    "components",
+    "jobs",
+    "syntax-highlighting"
 ;
